# cloudmart

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  liquibase.properties  main.py  pyproject.toml
.github/workflows/: docker-image.yml
app/: app.py
app/config/: db_connection.py  logger.py  settings.py
app/exchanges/: Project.py
app/models/: audit.py  project.py
app/routers/: frontend_router.py  hello_routers.py  project_router.py
app/services/: project_db_service.py
db/: changelog.xml
db/changelogs/: 1_create_table_project.xml
frontend/: next.config.ts  tsconfig.json
frontend/public/: og-image-cloudmart.html  site.webmanifest
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/_components/: Layout.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/applications/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/subscriptions/: page.tsx
frontend/src/components/: Layout.tsx
public/: 404.html  about.html  about.txt  applications.html  applications.txt  index.html  index.txt  profile.html  profile.txt  robots.txt  sitemap.xml  subscriptions.html  subscriptions.txt
public/404/: index.html
public/_next/static/chunks/: main-app-718f4197634ad1de.js
public/_next/static/chunks/app/: layout-24522b24b088507f.js  page-835d793d95539cea.js  page-b0bc57bf87182db9.js  page-c9fa1fc1bf86d4ca.js
public/_next/static/css/: 1ec3ab0c178e1780.css  6eda25d429dd6299.css  ebb319c7d660c107.css  f8f5582bb27a4bb3.css
public/_next/static/mr1iUDxbsFuXkOMDlJil1/: _buildManifest.js
(+3 files in other folders)
